# langchain_note

./: .gitignore  AGETNS.md
note/: 1.LangChain整体介绍.md  11.langgraph.md  2.LangChain基础使用.md  3.LangChain的Model IO.md
python/: 2.基础使用.py  3.多轮对话封装.py  4.提示模板.py  5.Agents.py  6.向量存储.py  7.提示模板.py  8.阿里文本向量模型.py  pyproject.toml
typescript/: command.ts  edge.ts  fanOutAndIn.ts  index.ts  keyFuncCache.ts  kycMainGraph.ts  kycSubgraph.ts  loop.ts  mainGraph.ts  mapReduce.ts  package.json  pnpm-lock.yaml  reducer.ts  riskSubgraph.ts  tool.ts  tsconfig.json  ttlCache.ts  zodMeta.ts
typescript/multi-agent/: main.ts
typescript/multi-agent/agents/ticket/: agent.ts  nodes.ts
typescript/multi-agent/agents/travel/: agent.ts
typescript/multi-agent/agents/travel/nodes/: chat.ts  intent.ts  prompts.ts  response.ts  router.ts  ticket-extractor.ts  ticket.ts  weather.ts
typescript/multi-agent/agents/weather/: agent.ts  nodes.ts
typescript/multi-agent/db/: ticket.ts  weather.ts
typescript/multi-agent/run/: demo.ts  interactive.ts
typescript/multi-agent/states/: index.ts  ticket.ts  travel.ts  weather.ts
typescript/multi-agent/tools/: index.ts  ticket.ts  weather.ts
typescript/multi-agent/utils/: model.ts
typescript/tools/modules/: agent.ts  graph.ts  model.ts  prompt.ts  state.ts
typescript/tools/modules/node/: content.ts  index.ts  summary.ts  title.ts
typescript/tools/tool/: index.ts  search.ts  timer.ts  weather.ts
